  - Added ImGuiColorEditFlags_NoColorMarkers to disable them.
  - Added style.ColorMarkerSize to configure width of color component markers.
- Sliders, Drags:
  - Added ImGuiSliderFlags_ColorMarkers to opt-in adding R/G/B/A color markers
    next to each components, in multi-components functions.
  - Added a way to select a specific marker color.
- InputText:
  - ImGuiInputTextCallbackData: SelectAll() also sets CursorPos to SelectionEnd.
  - ImGuiInputTextCallbackData: Added SetSelection() helper.
  - ImGuiInputTextCallbackData: Added ID and EventActive helpers. (#9174)
- Text, InputText:
  - Reworked word-wrapping logic:
    - Try to not wrap in the middle of contiguous punctuations. (#8139, #8439, #9094)
    - Try to not wrap between a punctuation and a digit. (#8503)
    - Inside InputTextMultiline() with _WordWrap: prefer keeping blanks at the
      end of a line rather than at the beginning of next line. (#8990, #3237)
  - Fixed low-level word-wrapping function reading from *text_end when passed
    a string range. (#9107) [@achabense]
  - Changed RenderTextEllipsis() logic to not trim trailing blanks before
    the ellipsis, making ellipsis position more consistent and not arbitrary
    hiding the possibility of multiple blanks. (#9229)
- Nav:
  - Fixed remote/shortcut InputText() not teleporting mouse cursor when
    nav cursor is visible and `io.ConfigNavMoveSetMousePos` is enabled.
  - Fixed a looping/wrapping issue when done in menu layer. (#9178)
  - Fixed speed scale for resizing/moving with keyboard/gamepad. We incorrectly
    used io.DisplayFramebufferScale (very old code), effectively making those
    actions faster on macOS/iOS retina screens.
    (changed this to use a style scale factor that's not fully formalized yet)
  - Fixed an UBSan warning when using in a ListClipper region . (#9160)
- Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
  noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]